feat: 멀티턴 기능 추가 개발
- 나만의 AI 초기 작업
- 대화 이력 관리 테이블 수정